<resources>
    <string name="a_covid_19_case_visited">A COVID-19 case visited %s:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">ADD</string>
    <string name="add_another_person">+ Add another person</string>
    <string name="add_family_members">Add Family Members</string>
    <string name="add_nickname">Add a nickname for this family member</string>
    <string name="add_others_to_the_check_in">Add others to the check-in</string>
    <string name="add_this_location_to_favourites"><u>Save this location</u> to Favourites</string>
    <string name="add_your_family_members">Add your family members</string>
    <string name="add_your_family_members_text">Do SafeEntry check-in for your family members who may not carry mobile devices.</string>
    <string name="agree_to_the_terms_se">— You agree to the terms and consent to the collection/use of your information for COVID-19 contact tracing</string>
    <string name="all_records">All records</string>
    <string name="allow">ALLOW</string>
    <string name="allow_while_using_app">Allow while using app</string>
    <string name="already_exists">This NRIC/FIN has already been added.</string>
    <string name="android_needs_location_permission">Android needs Location Permission for Bluetooth to work.</string>
    <string name="app_name">TraceTogether</string>
    <string name="app_needs_camera">The app needs Camera Permission to scan SafeEntry QR codes. Please enable Camera Permission in Settings to continue.</string>
    <string name="app_not_working">Your app is not working</string>
    <string name="app_updated">Your app is updated!</string>
    <string name="app_version">App Version</string>
    <string name="app_works_in_background" />
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="ask_request_list_failed_request_message">Message failed</string>
    <string name="awesome">AWESOME!</string>
    <string name="back">Back</string>
    <string name="back_of_card"><u>Back</u></string>
    <string name="back_of_nric">At the <u>back</u> of your NRIC</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="barcode_msg">Scan barcode to check in to SafeEntry locations</string>
    <string name="based_on_al">Based on all your TraceTogether and SafeEntry records from the last 14 days. &lt;font color=#0070E0>&lt;u>&lt;b>See details&lt;/b>&lt;/u> &lt;/font></string>
    <string name="battery_optimiser_opt">Let app run in background</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_fam_desc_collapse_fam">Collapse Floating Action Menu</string>
    <string name="belvedere_fam_desc_expand_fam">Expand Floating Action Menu</string>
    <string name="belvedere_fam_desc_open_gallery">Import file from gallery</string>
    <string name="belvedere_fam_desc_open_google_photos">Import image from Google Photos</string>
    <string name="belvedere_image_stream_file_too_large">File too large</string>
    <string name="belvedere_image_stream_title">Photo library</string>
    <string name="belvedere_image_stream_unknown_app">@string/request_attachment_generic_unknown_app</string>
    <string name="belvedere_permissions_denied">Permissions denied</string>
    <string name="belvedere_sdk_fpa_suffix_v2">.belvedere2.attachments</string>
    <string name="belvedere_stream_item_camera_tile_desc">Import image from camera</string>
    <string name="belvedere_stream_item_select_file_desc">Select file %s</string>
    <string name="belvedere_stream_item_select_image_desc">Select image %s</string>
    <string name="belvedere_stream_item_unselect_file_desc">Unselect file %s</string>
    <string name="belvedere_stream_item_unselect_image_desc">Unselect image %s</string>
    <string name="belvedere_toolbar_desc_collapse">Close image picker</string>
    <string name="bengali">বাংলা</string>
    <string name="bengali_code">bn</string>
    <string name="beta">Beta</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_data_deleted">All app Bluetooth data after 25 days will be automatically deleted.</string>
    <string name="bluetooth_exchanges">Bluetooth exchanges</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bt_exchange_records_desc">%s exchanges with TraceTogether users today</string>
    <string name="build_config_package">sg.gov.tech.bluetrace</string>
    <string name="burmese">ဗမာ</string>
    <string name="burmese_code">my</string>
    <string name="by_checking_in_you_agree_with_terms">By checking in, you agree with the terms.</string>
    <string name="by_checking_in_you_declare_that">By checking in, you declare that:</string>
    <string name="camera_perm">"Camera Permission is needed to
scan SafeEntry QR codes"</string>
    <string name="cancel">Cancel</string>
    <string name="card_serial_number">Card Serial Number</string>
    <string name="card_sn">"Card
Serial
Number"</string>
    <string name="categories_list_fragment_error_message">Failed to get categories</string>
    <string name="change_color"><b>New look</b> - from blue to red</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_back_card">Check the <u>back</u> of your card for Date of Issue</string>
    <string name="check_for_symptoms"><u>Check for symptoms</u></string>
    <string name="check_google_play_services_is_updated">Please ensure your Google Play Services is updated before trying again</string>
    <string name="check_in">Check In</string>
    <string name="check_in_fav_added">This location is in your Favourites</string>
    <string name="check_in_to">Check in to:</string>
    <string name="check_out">Check out</string>
    <string name="check_out_now"><u>Check out now</u></string>
    <string name="check_your_connection">Check your connection</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_uppercase">CLOSE</string>
    <string name="com.crashlytics.android.build_id">2310d362ca4345e09ed7deccd0186857</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="declaration_required">This declaration is required</string>
    <string name="for_national_servicemen">For National Servicemen, please approach your Unit Chief Clerk for the Date of Issue stated at the back of your NRIC.</string>
    <string name="group_check_in_error_message">Your family needs to check in with their own TraceTogether device. This ensures that all visitors have TraceTogether activated, to better protect you in crowded places.</string>
    <string name="group_check_in_error_title">Oops! This venue does not allow Group check in.</string>
    <string name="group_check_in_ok_text">OK, CHECK IN FOR MYSELF</string>
    <string name="have_dependent_pass_ready">"Please have your Dependent's Pass ready :)"</string>
    <string name="have_ltvp_ready">Please have your Long Term Visit Pass ready :)</string>
    <string name="have_nric_ready">Please have your NRIC or Birth Cert No. ready :)</string>
    <string name="have_passport_ready">Please have your Passport ready :)</string>
    <string name="have_student_pass_ready">"Please have your Student's Pass ready :)"</string>
    <string name="have_work_pass_ready">Please have your Work Pass ready :)</string>
    <string name="help">Help</string>
    <string name="how_to_find"><u>How to find?</u></string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_nric">Invalid NRIC</string>
    <string name="moh_use_info">The details that you provided are true. You agree to our Terms of Use, Privacy Statement, and for your data to be shared with MOH if you test positive for COVID-19, for the sole purpose of contact tracing.</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="nric_below_17">NRIC Date of Issue is not required for people below 17 years old.</string>
    <string name="nric_birth_cert_no_title">NRIC / Birth Cert No.</string>
    <string name="nric_date_of_issue">NRIC Date of Issue</string>
    <string name="nric_hint_s1234567a">e.g. S1234567A</string>
    <string name="nric_profile_title">Your NRIC details</string>
    <string name="ok">OK</string>
    <string name="otp_auto_filled">Your OTP was auto filled</string>
    <string name="passport_ica_error_message">You can only activate your app after clearing Singapore’s immigration. Also, check if you’ve entered the correct details into the app.</string>
    <string name="passport_ica_error_title">Singapore’s immigration does not have your Passport details</string>
    <string name="pause_tt_2h">Pause for 2 hours</string>
    <string name="pause_tt_30m">Pause for 30 minutes</string>
    <string name="pause_tt_8h">Pause for 8 hours</string>
    <string name="paused_text">We will not be able to help you note possible exposure to COVID-19 during this period ☹</string>
    <string name="proceed">Proceed</string>
    <string name="profile_fin_dependent">"FIN — Dependent's Pass"</string>
    <string name="profile_fin_ltvp">FIN — LTVP</string>
    <string name="profile_fin_student">"FIN — Student's Pass"</string>
    <string name="profile_fin_work">FIN — Work Pass</string>
    <string name="profile_nric">Singaporean/PR (all ages)</string>
    <string name="profile_visitor">"I'm Visiting Singapore"</string>
    <string name="required">Required</string>
    <string name="select_your_profile">Select your profile</string>
</resources>