<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/top_section" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_main_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/select_your_profile" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/OnboardingTitle" />
                <androidx.appcompat.widget.AppCompatImageView android:id="@id/help" android:background="?actionBarItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/tv_main_title" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_qnmark" />
                <androidx.cardview.widget.CardView android:id="@id/otp_auto_filled_bar" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="20.0dip" android:backgroundTint="@color/green_bg" app:cardCornerRadius="4.0dip" app:cardPreventCornerOverlap="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/normal_text" android:id="@id/otpAutoFilled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otp_auto_filled" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/close" app:layout_constraintTop_toTopOf="parent" />
                        <TextView android:textStyle="bold" android:textColor="@color/normal_text" android:gravity="center" android:id="@id/close" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/close_uppercase" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout android:orientation="vertical" android:id="@id/profile_selection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_main_title">
                    <sg.gov.tech.bluetrace.onboarding.newOnboard.register.DocumentSelectorView android:id="@id/select_nric" android:layout_width="fill_parent" android:layout_height="wrap_content" app:backgroundNeutral="@color/white" app:backgroundSelected="@color/new_accent" app:backgroundUnselected="@color/unselected_accent" app:prepareImage="@drawable/APKTOOL_DUMMY_26e" app:prepareText="@string/have_nric_ready" app:stringMsgNeutral="@string/profile_nric" app:stringMsgSelected="@string/profile_nric" app:stringMsgUnselected="@string/profile_nric" app:textColorNeutral="@color/normal_text" app:textColorSelected="@color/white" app:textColorUnselected="@color/unselected_text" />
                    <sg.gov.tech.bluetrace.onboarding.newOnboard.register.DocumentSelectorView android:id="@id/select_fin_work" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:backgroundNeutral="@color/white" app:backgroundSelected="@color/new_accent" app:backgroundUnselected="@color/unselected_accent" app:prepareImage="@drawable/APKTOOL_DUMMY_1bc" app:prepareText="@string/have_work_pass_ready" app:stringMsgNeutral="@string/profile_fin_work" app:stringMsgSelected="@string/profile_fin_work" app:stringMsgUnselected="@string/profile_fin_work" app:textColorNeutral="@color/normal_text" app:textColorSelected="@color/white" app:textColorUnselected="@color/unselected_text" />
                    <sg.gov.tech.bluetrace.onboarding.newOnboard.register.DocumentSelectorView android:id="@id/select_fin_dependent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:backgroundNeutral="@color/white" app:backgroundSelected="@color/new_accent" app:backgroundUnselected="@color/unselected_accent" app:prepareImage="@drawable/APKTOOL_DUMMY_1bc" app:prepareText="@string/have_dependent_pass_ready" app:stringMsgNeutral="@string/profile_fin_dependent" app:stringMsgSelected="@string/profile_fin_dependent" app:stringMsgUnselected="@string/profile_fin_dependent" app:textColorNeutral="@color/normal_text" app:textColorSelected="@color/white" app:textColorUnselected="@color/unselected_text" />
                    <sg.gov.tech.bluetrace.onboarding.newOnboard.register.DocumentSelectorView android:id="@id/select_fin_student" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:backgroundNeutral="@color/white" app:backgroundSelected="@color/new_accent" app:backgroundUnselected="@color/unselected_accent" app:prepareImage="@drawable/APKTOOL_DUMMY_1bc" app:prepareText="@string/have_student_pass_ready" app:stringMsgNeutral="@string/profile_fin_student" app:stringMsgSelected="@string/profile_fin_student" app:stringMsgUnselected="@string/profile_fin_student" app:textColorNeutral="@color/normal_text" app:textColorSelected="@color/white" app:textColorUnselected="@color/unselected_text" />
                    <sg.gov.tech.bluetrace.onboarding.newOnboard.register.DocumentSelectorView android:id="@id/select_fin_ltvp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:backgroundNeutral="@color/white" app:backgroundSelected="@color/new_accent" app:backgroundUnselected="@color/unselected_accent" app:prepareImage="@drawable/APKTOOL_DUMMY_1bc" app:prepareText="@string/have_ltvp_ready" app:stringMsgNeutral="@string/profile_fin_ltvp" app:stringMsgSelected="@string/profile_fin_ltvp" app:stringMsgUnselected="@string/profile_fin_ltvp" app:textColorNeutral="@color/normal_text" app:textColorSelected="@color/white" app:textColorUnselected="@color/unselected_text" />
                    <sg.gov.tech.bluetrace.onboarding.newOnboard.register.DocumentSelectorView android:id="@id/select_passport" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:backgroundNeutral="@color/white" app:backgroundSelected="@color/new_accent" app:backgroundUnselected="@color/unselected_accent" app:prepareImage="@drawable/APKTOOL_DUMMY_236" app:prepareText="@string/have_passport_ready" app:stringMsgNeutral="@string/profile_visitor" app:stringMsgSelected="@string/profile_visitor" app:stringMsgUnselected="@string/profile_visitor" app:textColorNeutral="@color/normal_text" app:textColorSelected="@color/white" app:textColorUnselected="@color/unselected_text" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Space android:id="@id/space" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:layout_constraintBottom_toTopOf="@id/btn_next" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/top_section" />
            <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:id="@id/btn_next" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/proceed" app:layout_constraintBottom_toBottomOf="parent" style="@style/ActionButton.Horizontal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>