<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/paused_text" style="@style/OnboardingSubDesc" />
    <RadioGroup android:orientation="vertical" android:id="@id/pause_radio_group" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton android:textColor="@color/black" android:id="@id/pause_30m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pause_tt_30m" style="@style/OnboardingSubDesc" />
        <androidx.appcompat.widget.AppCompatRadioButton android:textColor="@color/black" android:id="@id/pause_2h" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pause_tt_2h" app:layout_constraintTop_toTopOf="parent" style="@style/OnboardingSubDesc" />
        <androidx.appcompat.widget.AppCompatRadioButton android:textColor="@color/black" android:id="@id/pause_8h" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pause_tt_8h" app:layout_constraintTop_toTopOf="parent" style="@style/OnboardingSubDesc" />
    </RadioGroup>
</LinearLayout>