<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:padding="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
                <ImageView android:gravity="center_vertical" android:id="@id/back_nric" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_back" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/grey_13" android:gravity="center_vertical" android:id="@id/tv_main_title" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/nric_profile_title" android:layout_weight="1.0" />
                <androidx.appcompat.widget.AppCompatImageView android:gravity="center_vertical" android:id="@id/help_nric" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" app:layout_constraintBottom_toTopOf="@id/date_of_issue" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_main_title">
                <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:drawablePadding="6.0dip" android:drawableTint="@color/icon_tint" app:drawableLeftCompat="@drawable/person" style="@style/FormTitle" />
                <EditText android:id="@id/et_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:imeOptions="actionNext" android:textAllCaps="true" android:backgroundTint="@color/default_underline" style="@style/FormField" />
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_name_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/required" android:textAlignment="textStart" style="@style/FormError" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/llDob" android:paddingTop="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_of_birth" android:drawablePadding="6.0dip" android:drawableTint="@color/icon_tint" app:drawableLeftCompat="@drawable/usercalendar" style="@style/FormTitle" />
                <sg.gov.tech.bluetrace.view.DateInputBox android:id="@id/nric_dob" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/nricLayout" />
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/nric_dob_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/invalid_date" style="@style/FormError" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/nricLayout" android:paddingTop="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" app:layout_constraintBottom_toTopOf="@id/date_of_issue" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_main_title">
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_nric_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nric_birth_cert_no_title" android:drawablePadding="6.0dip" android:drawableTint="@color/icon_tint" app:drawableLeftCompat="@drawable/card" style="@style/FormTitle" />
                <EditText android:id="@id/et_nric_fin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/nric_hint_s1234567a" android:singleLine="true" android:inputType="textCapCharacters" android:imeOptions="actionNext" android:textAllCaps="true" android:backgroundTint="@color/default_underline" style="@style/FormField" />
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_nric_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/invalid_nric" android:textAlignment="textStart" app:layout_constraintTop_toBottomOf="@id/et_nric_fin" style="@style/FormError" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/nric_doi_holder" android:paddingTop="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nric_date_of_issue" android:drawablePadding="6.0dip" android:drawableTint="@color/icon_tint" app:drawableLeftCompat="@drawable/calendar" style="@style/FormTitle" />
                <sg.gov.tech.bluetrace.view.DateInputBox android:id="@id/date_of_issue" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/nricLayout" />
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/doi_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/invalid_date" style="@style/FormError" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="18.0sp" android:textColor="@color/hyperlink_blue" android:id="@id/how_to_find" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/how_to_find" android:drawableTint="@color/icon_tint" />
                <TextView android:textStyle="italic" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/for_national_servicemen" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView android:textStyle="italic" android:id="@id/minor_doi_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nric_below_17" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip">
                <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatCheckBox android:textSize="16.0sp" android:gravity="top" android:id="@id/declaration" android:layout_width="48.0dip" android:layout_height="wrap_content" android:text="" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/grey_14" android:textColorHighlight="#ff2668e9" android:textColorLink="#ff86b0f4" android:id="@id/declaration_txt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/moh_use_info" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.08" app:layout_constraintStart_toEndOf="@id/declaration" app:layout_constraintTop_toTopOf="parent" style="@style/OnboardingSubDesc" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_declaration_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/declaration_required" style="@style/FormError" />
            </LinearLayout>
            <Space android:id="@id/space" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/unselected_text" android:id="@id/btn_register" android:background="@drawable/button_red" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="24.0dip" android:layout_marginBottom="8.0dip" android:text="@string/next" android:textAllCaps="true" android:fontFamily="@font/font" android:backgroundTint="@color/action_button_selector" app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>